minor fixes so main logo is not overlapped by menu div, 2013 icons lay out properly in webkit, adding regenerate thumbs plugin, adding no-comments page template

--- a/themes/christmasbarrel-fundify/style.css
+++ b/themes/christmasbarrel-fundify/style.css
@@ -99,6 +99,12 @@ html.christmasbarrel body.fixed-header.admin-bar #header {
 	margin:0 -7px;
 	text-align:center;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	.vid-nav {
+		word-spacing:-1px;
+	}
+}
 .vid-nav:after {
 	content:".";visibility:hidden;display:block;height:0;clear:both;
 }
@@ -288,6 +294,8 @@ body.home .vid-nav {
 .header_logo {
 	padding-left:28px;
 	border: 0px;
+	position:relative;
+	z-index:1;
 }
 
 /* Static Header */
